# nomia

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
nomia/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_superuser.py  0003_test_users.py  0004_alter_node_node_type_alter_question_choices.py
static/: main.js
templates/: base_site.html  login.html  messages.html  top_panel.html
templates/polls/: poll_list.html  poll_result.html  vote.html
utils/: users.json
